Fixed issue with footer on minimized screens and made date/time more readable

--- a/ems-front-end/src/styles/AllEvents.css
+++ b/ems-front-end/src/styles/AllEvents.css
@@ -1,8 +1,12 @@
 .all-event-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   justify-content: space-between;
+}
+
+.events-wrapper {
+  flex: 1;
 }
 
 .arrow-btn {
